// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthResult > Success window 1`] = `
<body>
  <div>
    <div
      class="_window_2d008c"
    >
      <span
        class="yc-text yc-text_variant_body-1 _header-1_f0ca78 _window__title_2d008c"
      >
        <h1>
          Header!
        </h1>
      </span>
      <div
        class="_window__form_2d008c"
      >
         
        <div
          class="_auth-result-window_96d309"
        >
          <div
            class="_auth-result-window__text-block_96d309"
          >
            <span
              class="yc-text yc-text_variant_body-1 _subheader-3_f0ca78 _auth-result-window__status_96d309 _status-success_96d309"
            >
              Successfully
            </span>
            <span
              class="yc-text yc-text_variant_body-1 _body-2_f0ca78 _auth-result-window__message_96d309"
            >
              message
            </span>
          </div>
          <button
            class="yc-button yc-button_view_action yc-button_size_xl yc-button_pin_round-round yc-button_width_max _btn--primary_212512"
            type="button"
          >
            <span
              class="yc-button__text"
            >
              <a
                class="_link_c3e603 _auth-result-window__link_96d309"
                href="/login"
                target="_self"
              >
                Go to login page
              </a>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AuthResult > Unsuccess window 1`] = `
<body>
  <div>
    <div
      class="_window_2d008c"
    >
      <span
        class="yc-text yc-text_variant_body-1 _header-1_f0ca78 _window__title_2d008c"
      >
        <h1>
          Header!
        </h1>
      </span>
      <div
        class="_window__form_2d008c"
      >
         
        <div
          class="_auth-result-window_96d309"
        >
          <div
            class="_auth-result-window__text-block_96d309"
          >
            <span
              class="yc-text yc-text_variant_body-1 _subheader-3_f0ca78 _auth-result-window__status_96d309 _status-success_96d309"
            >
              Successfully
            </span>
            <span
              class="yc-text yc-text_variant_body-1 _body-2_f0ca78 _auth-result-window__message_96d309"
            >
              message
            </span>
          </div>
          <button
            class="yc-button yc-button_view_action yc-button_size_xl yc-button_pin_round-round yc-button_width_max _btn--primary_212512"
            type="button"
          >
            <span
              class="yc-button__text"
            >
              <a
                class="_link_c3e603 _auth-result-window__link_96d309"
                href="/login"
                target="_self"
              >
                Go to login page
              </a>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="_window_2d008c"
    >
      <span
        class="yc-text yc-text_variant_body-1 _header-1_f0ca78 _window__title_2d008c"
      >
        <h1>
          Header!
        </h1>
      </span>
      <div
        class="_window__form_2d008c"
      >
         
        <div
          class="_auth-result-window_96d309"
        >
          <div
            class="_auth-result-window__text-block_96d309"
          >
            <span
              class="yc-text yc-text_variant_body-1 _subheader-3_f0ca78 _auth-result-window__status_96d309 _status-unsuccess_96d309"
            >
              Invitation expired
            </span>
            <span
              class="yc-text yc-text_variant_body-1 _body-2_f0ca78 _auth-result-window__message_96d309"
            >
              message
            </span>
          </div>
          <button
            class="yc-button yc-button_view_action yc-button_size_xl yc-button_pin_round-round yc-button_width_max _btn--primary_212512"
            type="button"
          >
            <span
              class="yc-button__text"
            >
              <a
                class="_link_c3e603 _auth-result-window__link_96d309"
                href="/login"
                target="_self"
              >
                Go to login page
              </a>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
